--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@emotion/styled": "^11.3.0",
     "@reach/router": "^1.3.4",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.3.0",
+    "graphql": "^16.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-emotion": "^10.0.0",
@@ -44,8 +44,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "apollo": "^2.30.2"
+    "@testing-library/user-event": "^7.1.2"
   },
   "main": "src/index.js",
   "author": "Raphael Terrier @R4ph-t",
