--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,12 @@
   "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index"
+    "start": "API_URL=https://odyssey-lift-off-rest-api.herokuapp.com nodemon src/index"
   },
   "dependencies": {
-    "apollo-server": "^3.0.0",
-    "graphql": "^15.5.1"
+    "@apollo/server": "^4.3.0",
+    "axios": "^1.2.2",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
