--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "back-end demo app for Apollo's lift-off II course",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "API_URL=https://odyssey-lift-off-rest-api.herokuapp.com nodemon src/index"
+    "start": "API_URL=https://odyssey-lift-off-rest-api.herokuapp.com/ nodemon src/index"
   },
   "dependencies": {
+    "@apollo/datasource-rest": "^5.0.2",
     "@apollo/server": "^4.3.0",
     "axios": "^1.2.2",
     "graphql": "^16.6.0"
